# EchoesOfCrystal

./: BUILD.md  CMakeLists.txt  DESIGN.md  PROJECT.rar  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  build.bat  compile_direct.bat  verify_project.py
include/: Constants.h  Game.h  StateStack.h  Types.h
include/core/: AssetManager.h  AudioManager.h  RNG.h  SaveSystem.h
include/entities/: Bisasam.h  Boss.h  Chalamander.h  Enemy.h  Entity.h  Pikachu.h  Player.h  Pokemon.h  Skill.h
include/states/: CoinState.h  CombatState.h  DiceState.h  EnhancedCombatState.h  GameOverState.h  MapState.h  MenuState.h  PauseState.h  ReadyState.h  State.h  VictoryState.h
include/ui/: Bar.h  Button.h  CombatUI.h  Panel.h  TextLabel.h
include/world/: Map.h  Tile.h
src/: Game.cpp  StateStack.cpp  main.cpp
src/core/: AssetManager.cpp  AudioManager.cpp  RNG.cpp  SaveSystem.cpp
src/entities/: Bisasam.cpp  Boss.cpp  Chalamander.cpp  Enemy.cpp  Entity.cpp  Pikachu.cpp  Player.cpp  Pokemon.cpp  Skill.cpp
src/states/: CoinState.cpp  CombatState.cpp  DiceState.cpp  GameOverState.cpp  MapState.cpp  MenuState.cpp  PauseState.cpp  ReadyState.cpp  State.cpp  VictoryState.cpp
src/ui/: Bar.cpp  Button.cpp  CombatUI.cpp  Panel.cpp  TextLabel.cpp
src/world/: Map.cpp  Tile.cpp
